--- a/Tempus_PranjalSrivastava.ipynb
+++ b/Tempus_PranjalSrivastava.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Tempus_PranjalSrivastava.ipynb",
+      "name": "Classification_ML_case_study.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -28,7 +28,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Since Tempus deals with the data to see if it is clinically informative, I have assumed the data to be medical data and target to be synonymous to disease. Disease is there if target is 1, else 0"
+        " The data is clinical data where target=1 means diseased, else no disease"
       ],
       "metadata": {
         "id": "0q2Gninljk7A"
